remove compiler warning about deprecated method by removing the method, as it was only used in test code. Tidied code in changed classes